; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_dimension.c_dimension_add_not_null_on_column.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_dimension.c_dimension_add_not_null_on_column.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32, i32, i32 }

@AT_SetNotNull = common dso_local global i32 0, align 4
@T_AlterTableCmd = common dso_local global i32 0, align 4
@NOTICE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"adding not-null constraint to column \22%s\22\00", align 1
@.str.1 = private unnamed_addr constant [40 x i8] c"Time dimensions cannot have NULL values\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @dimension_add_not_null_on_column to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dimension_add_not_null_on_column(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_3__, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i8*, i8** %4, align 8
  store i8* %7, i8** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  store i32 0, i32* %8, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  %10 = load i32, i32* @AT_SetNotNull, align 4
  store i32 %10, i32* %9, align 4
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 3
  %12 = load i32, i32* @T_AlterTableCmd, align 4
  store i32 %12, i32* %11, align 8
  %13 = load i32, i32* @NOTICE, align 4
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @errmsg(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i8* %14)
  %16 = call i32 @errdetail(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0))
  %17 = call i32 @ereport(i32 %13, i32 %16)
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @list_make1(%struct.TYPE_3__* %5)
  %20 = call i32 @AlterTableInternal(i32 %18, i32 %19, i32 0)
  ret void
}

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*, i8*) #1

declare dso_local i32 @errdetail(i8*) #1

declare dso_local i32 @AlterTableInternal(i32, i32, i32) #1

declare dso_local i32 @list_make1(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
